[package]
name = "namespace-sets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.1", features = ["actix-tls"] }
clap = { version = "4.4.18", features = ["env", "debug", "derive"] }
diesel = { version = "2.1.4", features = ["postgres"] }
petgraph = "0.6.4"
